@startuml

title __WEBSOCKETS's Class Diagram__\n

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentation {
            + author : String
            + chatId : String
            + content : String
            + toString()
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentationDecoder {
            {static} - gson : Gson
            + decode()
            + destroy()
            + init()
            + willDecode()
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentationEncoder {
            {static} - gson : Gson
            + destroy()
            + encode()
            + init()
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessagingSocket {
            - session : Session
            + onClose()
            + onError()
            + onMessage()
            + onOpen()
            - broadcastToChat()
            - sendMessage()
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.SessionUserRegistry {
            {static} - instance : SessionUserRegistry
            - sessionUserMap : Map<Session, String>
            + addSessionForUser()
            {static} + createRegistry()
            + getUserFor()
            + removeSession()
            - SessionUserRegistry()
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.UserSocketRegistry {
            {static} - instance : UserSocketRegistry
            - userSocketMap : Map<String, MessagingSocket>
            + addSessionForUser()
            {static} + createRegistry()
            + getSocketFor()
            + hasSocketFor()
            + removeUser()
            - UserSocketRegistry()
        }
      }
    }
  }
  

  presentation.frontend.websockets.MessageRepresentationDecoder .up.|> javax.websocket.Decoder.Text
  presentation.frontend.websockets.MessageRepresentationEncoder .up.|> javax.websocket.Encoder.Text
  presentation.frontend.websockets.MessagingSocket o-- ports.Logger : logger
  presentation.frontend.websockets.MessagingSocket o-- application.MessagingAPI : messagingAPI
  presentation.frontend.websockets.MessagingSocket o-- presentation.frontend.websockets.SessionUserRegistry : sessionUserRegistry
  presentation.frontend.websockets.MessagingSocket o-- presentation.frontend.websockets.UserSocketRegistry : userSocketRegistry


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
